# project_launchpad

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
configs/: .env  settings.py  urls.py
frontend/: package.json
frontend/src/: types.d.ts
frontend/src/components/Sections/: Footer.tsx  Header.tsx
frontend/src/components/Sections/Resume/: BibliographyItem.tsx  ResumeSection.tsx  Timeline.tsx  index.tsx
frontend/src/data/: data.tsx  dataDef.ts  presentations.bib  publications.bib  publications.d.ts
launchpad/: views.py
launchpad/templates/: index.html
nginx/: Dockerfile  nginx.conf
submodules/portfolio_optimizer/portfolio_optimizer_webapp/: views.py
tunnel/: Dockerfile  config.yml
