[tool.poetry]
name = "project-launchpad"
version = "0.1.0"
description = "Central Django project to combine Django apps."
authors = ["nick-fournier <nichfournier@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
# sbyc-course-app = {git = "https://github.com/nick-fournier/sbyc_course_app.git"}
# bvi-itinerary = {git = "https://github.com/nick-fournier/bvi_itinerary.git"}
# portfolio-optimizer-webapp = {git = "https://github.com/nick-fournier/portfolio_optimizer_webapp.git"}
bvi-itinerary = {path = "submodules/bvi_itinerary", develop = true}
portfolio-optimizer-webapp = {path = "submodules/portfolio_optimizer_webapp", develop = true}
sbyc-course-app = {path = "submodules/sbyc_course_app", develop = true}
psycopg2-binary = "^2.9.10"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
