[project]
name = "project-launchpad"
version = "2024.2.2"
description = "A race course map lookup web app for SBYC Friday Night Series."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bvi-itinerary",
    "django>=4.2.18",
    "gunicorn>=23.0.0",
    "portfolio-optimizer-webapp",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "sbyc-course-app",
]

[tool.uv.sources]
portfolio-optimizer-webapp = { workspace = true }
bvi-itinerary = { workspace = true }
sbyc-course-app = { workspace = true }

[tool.uv.workspace]
members = ["submodules/bvi_itinerary", "submodules/sbyc_course_app", "submodules/portfolio_optimizer_webapp"]
